clang/test/BSC/Negative/Ownership/Borrow/borrow_call_arg/borrow_call_arg.cbs
// RUN: %clang_cc1 -verify %s

owned struct Rc<T> {
};

owned struct Weak<T> {
};

Weak<T> Weak<T>::new(const Rc<T> *_Borrow rc);

owned struct S { 
};

void test(Rc<S> rc) {
    Weak<int> wk1 = Weak<int>::new(&const rc); // expected-error {{incompatible borrow types, cannot cast 'const owned Rc<owned struct S> *_Borrow' to 'const owned Rc<int> *_Borrow'}}
}
